<resources>
    <string name="app_name">popular-movies-app</string>
    <string name="error_message">Failed to get results. Please try again</string>
    <!-- details -->
    <string name="title_movie_list">Movie Title</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="detail_rate">5.0</string>
    <string name="release_day">13/12/2019</string>
    <string name="tv_plot_synopsis"> "" </string>
    <!--detail-->
    <string name="label_rate">Rate:</string>
    <string name="label_release_date">Release date</string>
    <string name="label_overview">Overview:  </string>
    <!--menu-->
    <string name="popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="favorites">favorites</string>

    <string name="movie_poster">movie poster</string>
    <!-- row movie title-->
    <string name="movie_title">Movie title</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="label_trailers">Trailers</string>
    <string name="trailers">Trailers</string>
    <string name="movie_trailer_icon">movie_trailer_icon</string>
    <string name="reviews">Reviews</string>
    <string name="trailer">Trailer</string>
    <string name="user_reviews">user reviews</string>
    <string name="no_results_found">No results found…Please try again later!</string>

    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="action_settings">Settings</string>
    <string name="share">share</string>
    <string name="name_movie">name_movie</string>

</resources>